<resources>
    <string name="app_name">Project PBP 1</string>
    <string name="nama">Nama</string>
    <string name="tempat_lahir">Tempat Lahir</string>
    <string name="tanggal_lahir">Tanggal Lahir</string>
    <string name="lihat_hasil">Lihat Hasil</string>
    <string name="pilih_tanggal">Pilih Tanggal</string>
    <string name="show_nama">Nama</string>
    <string name="show_tanggal_lahir">Tanggal Lahir</string>
    <string name="show_tempat_lahir">Tempat Lahir</string>
    <string name="back">back</string>
</resources>