<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:orientation="vertical"
        android:padding="24dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nama" />
        <EditText
            android:id="@+id/nama"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:inputType="text"
            android:minHeight="48dp"
            android:autofillHints="" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tempat_lahir" />

        <EditText
            android:id="@+id/tempat_lahir"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:inputType="text"
            android:minHeight="48dp"
            android:autofillHints="" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tanggal_lahir" />

        <Button
            android:id="@+id/tanggal_lahir"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pilih_tanggal" />

        <EditText
            android:id="@+id/set_tanggal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:inputType="text"
            android:minHeight="48dp"
            android:autofillHints="" />
        <Button
            android:id="@+id/btn_lihat_hasil"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lihat_hasil" />

    </LinearLayout>
</ScrollView>